chore: pakage.json 라이브러리 추가
1. dotent : 환경변수용
2. pdf-merger-js : pdf 합병용
3. puppeteer : 브라우저 접근용

--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "@commitlint/cli": "^20.0.0",
     "@commitlint/config-conventional": "^20.0.0",
     "husky": "^9.1.7"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "pdf-merger-js": "^5.1.2",
+    "puppeteer": "^24.22.3"
   }
 }
